[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/AddingPointMenu.gd" type="Script" id=1]

[node name="AddingPointMenu" type="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -140.5
margin_bottom = 140.5
input_pass_on_modal_close_click = false
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -134.0
margin_bottom = 134.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 215.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 208.0
margin_bottom = 261.0
custom_constants/separation = 8
alignment = 1

[node name="DroneName" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 201.0
margin_bottom = 14.0
text = "Drone name"
align = 1

[node name="DeleteLastPoint" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 201.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 40 )
text = "Delete last Point"

[node name="ClearPoints" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 201.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 40 )
text = "Clear all Points"

[node name="LandingPoint" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 201.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 40 )
text = "Add Landing Point"

[node name="spinningpoint" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
visible = false
margin_top = 166.0
margin_right = 201.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 40 )
text = "Add Spinning Point"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 201.0
margin_bottom = 206.0

[node name="TakeoffPoint" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 123.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Add Takeoff Point"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 127.0
margin_right = 201.0
margin_bottom = 40.0
step = 0.5
value = 1.0
suffix = "m"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
visible = false
margin_top = 262.0
margin_right = 204.0
margin_bottom = 302.0

[node name="waitingpoint" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 126.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Add Waiting Point"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 130.0
margin_right = 204.0
margin_bottom = 40.0
step = 0.5
value = 1.0
suffix = "s"

[node name="SavePoints" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 201.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 40 )
text = "Save Points"

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/DeleteLastPoint" to="." method="_on_DeletePoint_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/ClearPoints" to="." method="_on_ClearPoints_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/LandingPoint" to="." method="_on_LandingPoint_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/spinningpoint" to="." method="_on_spinningpoint_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/TakeoffPoint" to="." method="_on_TakeoffPoint_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/waitingpoint" to="." method="_on_waitingpoint_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/SavePoints" to="." method="_on_SavePoints_pressed"]
